--- a/style_home.css
+++ b/style_home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/images/bg3_v2.jpg");
+  background-image: url("images/bg3_v2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
