--- a/style_home.css
+++ b/style_home.css
@@ -19,14 +19,14 @@ body {
 
 #text {
   width: 66%;
-  margin: auto;
+  margin: 40px auto;
   background: rgba(0, 0, 0, 0.5);
   color: white;
   font-size: 20px;
   font-weight: 300;
   /* height: auto; */
   padding: 50px 0;
-  margin-top: 40px;
+  
   border-radius: 25px;
 }
 
