--- a/style_ranks.css
+++ b/style_ranks.css
@@ -20,6 +20,7 @@ body {
 #old {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+
   align-items: center;
 }
 
@@ -36,6 +37,7 @@ body {
   width: 50%;
 
   margin: 35px auto;
+
   padding: 30px;
 
   text-align: center;
@@ -74,7 +76,17 @@ button {
 
   cursor: pointer;
 
-  background-image: url(images/nav_bg_active.jpg);
+  background-image: url(/images/nav_bg_active.jpg);
   border: none;
   border-radius: 8px;
+}
+
+#animation {
+  margin: auto;
+  width: 50%;
+}
+canvas {
+  width: 100%;
+
+  /* height: auto; */
 }
