--- a/style_battlefeild.css
+++ b/style_battlefeild.css
@@ -132,7 +132,23 @@ a {
 }
 
 @media (max-width: 590px) {
+  body {
+    background-image: none;
+  }
+
   #main {
-    margin-top: 37px;
+    margin-top: 35px;
+  }
+
+  #creeps {
+    width: 85%;
+  }
+
+  #battlefeild img {
+    height: 7%;
+  }
+
+  .icon {
+    width: 49%;
   }
 }
