--- a/style_home.css
+++ b/style_home.css
@@ -39,9 +39,15 @@ p {
   margin-bottom: 25px;
 }
 
-@media (max-width: 670px) {
+@media (max-width: 705px) {
   #text {
     width: 75%;
     font-size: 15px;
+  }
+}
+
+@media (max-width: 450px) {
+  #text {
+    width: 85%;
   }
 }
