--- a/style_ranks.css
+++ b/style_ranks.css
@@ -27,7 +27,7 @@ body {
 #new,
 #old > p {
   text-align: center;
-  font-size: 1vw;
+  font-size: 1.2vw;
 }
 
 #form {
@@ -89,4 +89,30 @@ canvas {
   width: 100%;
 
   /* height: auto; */
+}
+
+@media (max-width: 705px) {
+  #animation {
+    width: 75%;
+  }
+  #form {
+    width: 75%;
+  }
+
+  #form h2 {
+    font-size: 30px;
+  }
+
+  #form h3 {
+    font-size: 17px;
+  }
+
+  label {
+    font-size: 15px;
+  }
+
+  #new,
+  #old > p {
+    font-size: 1.6vw;
+  }
 }
