--- a/style_home.css
+++ b/style_home.css
@@ -39,6 +39,10 @@ p {
   margin-bottom: 25px;
 }
 
+#dynamicDate {
+  margin-bottom: 15px;
+}
+
 @media (max-width: 705px) {
   #text {
     width: 75%;
