--- a/style_ranks.css
+++ b/style_ranks.css
@@ -22,6 +22,7 @@ body {
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
 
   align-items: center;
+  justify-content: center;
 }
 
 #new,
